Fix text alignment on rotator

--- a/resources/sass/components/_rotator.scss
+++ b/resources/sass/components/_rotator.scss
@@ -4,7 +4,7 @@
     max-width: 100%;
     overflow: hidden;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: bottom;
     color: var(--theme-color);
     font-weight: bold;
 
